--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,6 +8,10 @@ on:
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
+    # 添加权限设置
+    permissions:
+      contents: write
+      pages: write
     steps:
       - name: Checkout 🛎️
         uses: actions/checkout@v3
@@ -28,3 +32,5 @@ jobs:
           branch: gh-pages # The branch the action should deploy to.
           clean: true # 自动清理旧文件
           silent: false # 显示详细日志以便调试
+          ssh-key: ${{ secrets.DEPLOY_KEY }} # 使用部署密钥进行身份验证
+          # token: ${{ secrets.GITHUB_TOKEN }} # 使用GitHub提供的令牌进行身份验证
